完成发送图片后端代码
