# docs/swagger.json
@@ -4,6 +4,15 @@
         "contact": {}
     },
     "paths": {
+        "/attach/upload": {
+            "post": {
+                "tags": [
+                    "信息模块"
+                ],
+                "summary": "发送图片",
+                "responses": {}
+            }
+        },
         "/index": {
             "get": {
                 "tags": [
@@ -35,6 +44,21 @@
                 ],
                 "summary": "发送信息",
                 "responses": {}
+            }
+        },
+        "/toChat": {
+            "get": {
+                "tags": [
+                    "首页"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
             }
         },
         "/toRegister": {
@@ -151,6 +175,30 @@
                         "type": "string",
                         "description": "确认密码",
                         "name": "repassword",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\",\"data“}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/searchFriends": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "查询好友列表",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户id",
+                        "name": "userId",
                         "in": "query"
                     }
                 ],
